Added comments to html pages for Oscar Wilde quotes webapp

--- a/quotes/templates/quotes/about.html
+++ b/quotes/templates/quotes/about.html
@@ -1,14 +1,19 @@
+<!-- File: about.html -->
+<!-- Author: Letitia Caspersen (letitiac@bu.edu), 1/28/2026 -->
+<!-- 'about' page for Oscar Wilde quotes web app -->
+
+<!-- base page contains header and navigation panel -->
 {% extends 'quotes/base.html' %}
 
-{% block title %}About - Oscar Wilde{% endblock %}
-
+<!-- page content: contains biographical information about Oscar Wilde,
+and a description of this site -->
 {% block content %}
 <h2>About Oscar Wilde</h2>
 <p>
     Oscar Fingal O'Flahertie Wills Wilde (1854-1900) was an Irish poet and playwright.
     He became one of the most successful playwrights of the late Victorian era in London
     and one of the greatest celebrities of his day, known for his brilliant wit, flamboyant
-    style, and infamous imprisonment for gross indecency.
+    style, and infamous imprisonment for indecency.
 </p>
 <p>
     His works include "The Picture of Dorian Gray," "The Importance of Being Earnest,"
