fixed typos and standardized capitalization in HTML pages' comments

--- a/quotes/templates/quotes/about.html
+++ b/quotes/templates/quotes/about.html
@@ -1,11 +1,11 @@
 <!-- File: about.html -->
 <!-- Author: Letitia Caspersen (letitiac@bu.edu), 1/28/2026 -->
-<!-- 'about' page for Oscar Wilde quotes web app -->
+<!-- About page for Oscar Wilde quotes webapp -->
 
-<!-- base page contains header and navigation panel -->
+<!-- Base page contains header and navigation panel -->
 {% extends 'quotes/base.html' %}
 
-<!-- page content: contains biographical information about Oscar Wilde,
+<!-- Page content: Contains biographical information about Oscar Wilde,
 and a description of this site -->
 {% block content %}
 <h2>About Oscar Wilde</h2>
