fixed home page urls

--- a/cs412/templates/home.html
+++ b/cs412/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>CS412 Apps</h1>
-    <a href="/quotes/"><button>Quotes</button></a>
-    <a href="/restaurant/"><button>Restaurant</button></a>
+    <a href="{% url 'quote' %}"><button>Quotes</button></a>
+    <a href="{% url 'main' %}"><button>Restaurant</button></a>
 </body>
 </html>
