added comment to main.html

--- a/restaurant/templates/restaurant/main.html
+++ b/restaurant/templates/restaurant/main.html
@@ -1,3 +1,7 @@
+<!-- File: main.html -->
+<!-- Author: Letitia Caspersen (letitiac@bu.edu), 2/3/2026 -->
+<!-- Main page for Sealy's Restaurant webapp -->
+
 {% extends 'restaurant/base.html' %}
 {% load static %}
 
