added mini insta to my home nav page of all 412 projects

--- a/cs412/templates/home.html
+++ b/cs412/templates/home.html
@@ -7,5 +7,6 @@
     <h1>CS412 Apps</h1>
     <a href="{% url 'quote' %}"><button>Quotes</button></a>
     <a href="{% url 'main' %}"><button>Restaurant</button></a>
+    <a href="{% url 'show_all_profiles' %}"><button>Mini Insta</button></a>
 </body>
 </html>
