added admin page to home nav page

--- a/cs412/templates/home.html
+++ b/cs412/templates/home.html
@@ -8,5 +8,6 @@
     <a href="{% url 'quote' %}"><button>Quotes</button></a>
     <a href="{% url 'main' %}"><button>Restaurant</button></a>
     <a href="{% url 'show_all_profiles' %}"><button>Mini Insta</button></a>
+    <a href="{% url 'admin:index' %}"><button>Admin</button></a>
 </body>
 </html>
