fixed calls to get_image_url

--- a/mini_insta/templates/mini_insta/show_post.html
+++ b/mini_insta/templates/mini_insta/show_post.html
@@ -16,7 +16,7 @@
         {% if photos %}
             {% for photo in photos %}
             <div class="photo">
-                <img src="{{ photo.image_url }}" alt="Post Photo">
+                <img src="{{ photo.get_image_url }}" alt="Post Photo">
             </div>
             {% endfor %}
         {% else %}
