--- a/mini_insta/templates/mini_insta/create_post_form.html
+++ b/mini_insta/templates/mini_insta/create_post_form.html
@@ -1,5 +1,5 @@
 <!-- File: create_post_form.html -->
-<!-- Author: Letitia Caspersen (letitiac@bu.edu), 2/19/2026 -->
+<!-- Author: Letitia Caspersen (letitiac@bu.edu), 2/26/2026 -->
 <!-- HTML page for mini insta, form to create a new post -->
 
 {% extends 'mini_insta/base.html' %}
@@ -8,7 +8,7 @@
 <div class="create_post">
     <h2>Create a New Post for {{ profile.display_name }}</h2>
 
-    <form method="POST" action="{% url 'create_post' profile.pk %}">
+    <form method="POST" enctype="multipart/form-data" action="{% url 'create_post' profile.pk %}">
         {% csrf_token %}
 
         <div class="form_field">
@@ -17,8 +17,8 @@
         </div>
 
         <div class="form_field">
-            <label for="image_url">Image URL:</label>
-            {{ form.image_url }}
+            <label for="image_file">Image File:</label>
+            <input type="file" name="image_file" multiple>
         </div>
 
         <div class="form_buttons">
