--- a/mini_insta/templates/mini_insta/show_profile.html
+++ b/mini_insta/templates/mini_insta/show_profile.html
@@ -1,5 +1,5 @@
 <!-- File: show_profile.html -->
-<!-- Author: Letitia Caspersen (letitiac@bu.edu), 2/19/2026 -->
+<!-- Author: Letitia Caspersen (letitiac@bu.edu), 2/27/2026 -->
 <!-- HTML page for mini insta, showing a single profile -->
 
 {% extends 'mini_insta/base.html' %}
@@ -12,6 +12,7 @@
     <p>{{ profile.username }}</p>
     <p>{{ profile.bio_text }}</p>
     <p>Joined: {{ profile.join_date }}</p>
+    <a href="{% url 'update_profile' profile.pk %}"><button type="button">Update Profile</button></a>
 </div>
 
 <div class="posts">
